--- a/style.css
+++ b/style.css
@@ -264,12 +264,13 @@ p {
 #projects .projects-info p {
     color: white;
 }
-#projects .project-img {
+#projects .projects-img {
     flex-basis: 50%;
     height: 300px;
     overflow: hidden;
+    position: relative;
 }
-#projects .project-img:after {
+#projects .projects-img:after {
 	content: '';
 	position: absolute;
 	left: 0;
@@ -279,10 +280,10 @@ p {
 	background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
 	opacity: 0.7;
 }
-#projects .project-img img {
+#projects .projects-img img {
     transition: .3s ease transform;
 }
-#projects .projects-item:hover .project-img img {
+#projects .projects-item:hover .projects-img img {
     transform: scale(1.1);
 }
 
