--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 html{
     font-size: 10px;
     font-family: 'Ubuntu', sans-serif;
+    scroll-behavior: smooth;
 }
 a{
     text-decoration: none;
@@ -59,7 +60,144 @@ p {
 .cta:hover {
     color: black;
     background-color: rgb(65, 171, 241); 
-}    
+}  
+.brand h1 {
+    font-size: 3rem;
+    text-transform: uppercase;
+    color: white;
+}  
+.brand h1 span {
+    color: rgb(65, 171, 241);
+}
+
+/* header */
+#header {
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100vw;
+    height: auto;
+}
+#header .header {
+    min-height: 8vh;
+    background-color: rgba(31, 30, 30, 0.24);
+    transition: .3s ease background-color;
+}
+#header .nav-bar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    max-width: 1300px;
+    padding: 0 10px;
+}
+#header .nav-list ul {
+    list-style: none;
+    position: absolute;
+    background-color: rgb(31, 30, 30);
+    width: 100vw;
+    height: 100vh;
+    left: 100%;
+    top: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    overflow-x: hidden;
+    transition: .5s ease left;
+}
+#header .nav-list ul.active {
+    left: 0;
+}
+#header .nav-list ul a{
+    font-size: 2.5rem;
+    font-weight: 500;
+    letter-spacing: .2rem;
+    text-decoration: none;
+    color: white;
+    text-transform: uppercase;
+    padding: 20px;
+    display: block;
+}
+#header .nav-list ul a::after {
+    content: attr(data-after);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(0);
+    color: rgba(240, 258, 255, 0.021);
+    font-size: 13rem;
+    letter-spacing: 50px;
+    z-index: -1;
+    transition: .3s ease letter-spacing;
+}
+#header .nav-list ul li:hover a::after{
+    transform: translate(-50%, -50%) scale(1);
+    letter-spacing: initial;
+}
+#header .nav-list ul li:hover a {
+    color: rgb(65, 171, 241);
+}
+#header .hamburger {
+    height: 60px;
+    width: 60px;
+    display: inline-block;
+    border: 3px solid white;
+    border-radius: 50%;
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 100;
+    cursor: pointer;
+    transform: scale(.8);
+    margin-right: 20px;
+}
+#header .hamburger::after {
+    position: absolute;
+    content: '';
+    height: 100%;
+    width: 100%;
+    border-radius: 50%;
+    border: 3px solid white;
+    animation: hamburger_puls 1s ease infinite;
+}
+#header .hamburger .bar {
+    height: 2px;
+    width: 30px;
+    position: relative;
+    background-color: white;
+    z-index: -1;
+}
+#header .hamburger .bar::after,
+#header .hamburger .bar::before {
+    content: '';
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    left: 0;
+    background-color: white;
+    transition: .3s ease;
+    transition-property: top, bottom;
+}
+#header .hamburger .bar::after {
+    top: 8px;
+}
+#header .hamburger .bar::before {
+    bottom: 8px;
+}
+#header .hamburger.active .bar::before {
+    bottom: 0;
+}
+#header .hamburger.active .bar::after {
+    top: 0;
+}
+
+/* end of header */
+
 
 /* hero section */
 #hero {
@@ -147,6 +285,55 @@ p {
  } */
 /* end of hero section */
 
+/* about section */
+#about .about {
+    flex-direction: column-reverse;
+    text-align: center;
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 100px 20px;
+}
+#about .col-left {
+    width: 250px;
+    height: 360px;
+}
+#about .col-right {
+    width: 100%;
+}
+#about .col-right h2 {
+    font-size: 1.8rem;
+    font-weight: 500;
+    letter-spacing: .2rem;
+    margin-bottom: 10px;
+}
+#about .col-right p {
+    margin-bottom: 20px;
+}
+#about .col-right .cta {
+    color: black;
+    margin-bottom: 50px;
+    padding: 10px 20px;
+    font-size: 2rem;
+}
+#about .col-left .about-img {
+    height: 100%;
+    width: 100%;
+    position: relative;
+    border: 10px solid white;
+}
+#about .col-left .about-img::after {
+    content: '';
+    position: absolute;
+    left: -33px;
+    top: 19px;
+    height: 98%;
+    width: 98%;
+    border: 7px solid rgb(65, 171, 241);
+    z-index: -1;
+}
+/* end of about section */
+
+
 /* skills section */
 #skills {
 
@@ -157,6 +344,10 @@ p {
     max-width: 1500px;
     margin: 0 auto;
     padding: 100px 0;
+}
+#skills .skills-top {
+    max-width: 500px;
+    margin: 0 auto;
 }
 #skills .skills-bottom {
     display: flex;
@@ -188,7 +379,7 @@ p {
     height: 100%;
     width: 100%;
     background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
-    opacity: .8;
+    opacity: .9;
     z-index: -1;
 }
 #skills .skills-bottom .icon {
@@ -209,7 +400,7 @@ p {
 }  
 #skills .skills-item p {
     color: white;
-    word-spacing: 30px;
+    /* word-spacing: 5px; */
 }  
 
 
@@ -290,53 +481,6 @@ p {
 
 /* end of Projects section */
 
-/* about section */
-#about .about {
-    flex-direction: column-reverse;
-    text-align: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 100px 20px;
-}
-#about .col-left {
-    width: 250px;
-    height: 360px;
-}
-#about .col-right {
-    width: 100%;
-}
-#about .col-right h2 {
-    font-size: 1.8rem;
-    font-weight: 500;
-    letter-spacing: .2rem;
-    margin-bottom: 10px;
-}
-#about .col-right p {
-    margin-bottom: 20px;
-}
-#about .col-right .cta {
-    color: black;
-    margin-bottom: 50px;
-    padding: 10px 20px;
-    font-size: 2rem;
-}
-#about .col-left .about-img {
-    height: 100%;
-    width: 100%;
-    position: relative;
-    border: 10px solid white;
-}
-#about .col-left .about-img::after {
-    content: '';
-    position: absolute;
-    left: -33px;
-    top: 19px;
-    height: 98%;
-    width: 98%;
-    border: 7px solid rgb(65, 171, 241);
-    z-index: -1;
-}
-/* end of about section */
 
 /* Contact section */
 #contact .contact {
@@ -382,7 +526,57 @@ p {
 }
 /* end of Contact section */
 
+/* Footer */
+#footer {
+    background-image: linear-gradient(60deg, #29323c 0%, #485563 100%);
+}
+#footer .footer {
+    min-height: 200px;
+    flex-direction: column;
+    padding-top: 50px;
+    padding-bottom: 10px;
+}
+#footer h2 {
+    color: white;
+    font-weight: 500;
+    font-size: 1.8rem;
+    letter-spacing: .1rem;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+#footer .social-icon {
+    display: flex;
+    margin-bottom: 30px;
+}
+#footer .social-item {
+    height: 50px;
+    width: 50px;
+    margin: 0 5px;
+}
+#footer .social-item img {
+    filter: grayscale(1);
+    transition: .3s ease filter;
+}
+#footer .social-item:hover img {
+    filter: grayscale(0);
+}
+#footer p {
+    color: white;
+    font-size: 1.3rem;
+}
+/* End of Footer */
+
 /* keyframes */
+@keyframes hamburger_puls {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1.4);
+    }
+}
 @keyframes text_reveal_box{
     50% {
         width: 100%;
@@ -407,3 +601,142 @@ p {
     }
 }
 /* keyframes */
+
+/* Media For Tablet */
+@media only screen and (min-width: 768px) {
+    .cta {
+        font-size: 2.5rem;
+        padding: 20px 60px;
+    }
+    h1.section-title {
+        font-size: 6rem;
+    }
+
+    /* Hero */
+        #hero h1 {
+            font-size: 7rem;
+        }
+    /* End of Hero */
+
+    /* About */
+        #about .about {
+            flex-direction: row;
+        }
+        #about .col-left {
+            width: 600px;
+            height: 400px;
+            padding-left: 60px;
+        }
+        #about .about .col-left .about-img::after{
+            left: -45px;
+            top: 34px;
+            height: 98%;
+            width: 98%;
+            border: 10px solid rgb(65, 171, 241);
+        }
+        #about .col-right {
+            text-align: left;
+            padding: 30px;
+        }
+        #about .col-right h1 {
+            text-align: left;
+        }
+    /* End of About */
+
+    /* Skills */
+    #skills .skills-bottom .skills-item {
+        flex-basis: 45%;
+        margin: 2.5%;
+    }
+    /* End of Skills */
+
+    /* Projects */
+    #projects .projects-item {
+        flex-direction: row;
+    }
+    #projects .projects-item:nth-child(even) {
+        flex-direction: row-reverse;
+    }
+    #projects .projects-item {
+        height: 400px;
+        margin: 0;
+        width: 100%;
+        border-radius: 0;
+    }
+    #projects .all-projects .projects-info {
+        height: 100%;
+    }
+    #projects .all-projects .projects-img {
+        height: 100%;
+    }
+    /* End of Projects */
+
+    /* contact */
+    #contact .contact {
+        flex-direction: column;
+        padding: 100px 0;
+        align-items: center;
+        justify-content: center;
+        min-width: 20vh;
+    }
+    #contact .contact-items {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-evenly;
+        margin: 0;
+    }
+    #contact .contact-item {
+        width: 30%;
+        margin: 0;
+        flex-direction: row;
+    }
+    #contact .contact-item .icon {
+        height: 100px;
+        width: 100px;
+    }
+    #contact .contact-item .icon img {
+        object-fit: contain;
+    }
+    #contact .contact-item .contact-info {
+        width: 100%;
+        text-align: left;
+        padding-left: 20px;
+    }
+    /* end of contact */
+}
+/* End of Media For Tablet */
+
+
+/* Media for Desktop */
+@media only screen and (min-width: 1200px) {
+
+    /* heaer */
+    #header .hamburger {
+        display: none;
+    }
+    #header .nav-list ul {
+        position: initial;
+        display: block;
+        height: auto;
+        width: fit-content;
+        background-color: transparent;
+    }
+    #header .nav-list ul li {
+        display: inline-block;
+    }
+    #header .nav-list ul li a {
+        font-size: 1.8rem;
+    }
+    #header .nav-list ul a::after{
+        display: none;
+    }
+    /* end of header */
+
+#skills .skills-bottom .skills-item {
+    flex-basis: 22%;
+    margin: 1.5%;
+}
+
+}
+/* End of Media for Desktop */
